@@ -281,6 +281,87 @@ plexes = {
 				{ snp_name => 'rs999072', ref_allele => 'C', alt_allele => 'T', chr => '20', pos => '23347553', allele_swap => 1 },
 			]
 	},
+	'study5392' = { 
+		desc    = '75 SNPs'
+		snps =
+			[
+				{ snp_name => 'rs10236187', ref_allele => 'A', alt_allele => 'C', chr => 'chr7', pos => '139747578', allele_swap => 0 },
+				{ snp_name => 'rs1028528', ref_allele => 'A', alt_allele => 'G', chr => 'chr22', pos => '47966541', allele_swap => 1 },
+				{ snp_name => 'rs10421769', ref_allele => 'T', alt_allele => 'C', chr => 'chr19', pos => '33114406', allele_swap => 1 },
+				{ snp_name => 'rs1052622', ref_allele => 'G', alt_allele => 'A', chr => 'chr15', pos => '74175515', allele_swap => 0 },
+				{ snp_name => 'rs1058083', ref_allele => 'A', alt_allele => 'G', chr => 'chr13', pos => '99385979', allele_swap => 1 },
+				{ snp_name => 'rs1109037', ref_allele => 'G', alt_allele => 'A', chr => 'chr2', pos => '9945593', allele_swap => 0 },
+				{ snp_name => 'rs11096957', ref_allele => 'T', alt_allele => 'G', chr => 'chr4', pos => '38774870', allele_swap => 0 },
+				{ snp_name => 'rs1131498', ref_allele => 'A', alt_allele => 'G', chr => 'chr1', pos => '169707345', allele_swap => 0 },
+				{ snp_name => 'rs117799245', ref_allele => 'C', alt_allele => 'T', chr => 'chr18', pos => '10696536', allele_swap => 0 },
+				{ snp_name => 'rs117854118', ref_allele => 'C', alt_allele => 'T', chr => 'chr14', pos => '50244645', allele_swap => 0 },
+				{ snp_name => 'rs11953478', ref_allele => 'C', alt_allele => 'T', chr => 'chr5', pos => '113433962', allele_swap => 0 },
+				{ snp_name => 'rs12577167', ref_allele => 'A', alt_allele => 'G', chr => 'chr11', pos => '5453888', allele_swap => 0 },
+				{ snp_name => 'rs12828016', ref_allele => 'G', alt_allele => 'T', chr => 'chr12', pos => '889199', allele_swap => 1 },
+				{ snp_name => 'rs13134862', ref_allele => 'G', alt_allele => 'A', chr => 'chr4', pos => '75500686', allele_swap => 1 },
+				{ snp_name => 'rs139527148', ref_allele => 'C', alt_allele => 'G', chr => 'chrX', pos => '104114732', allele_swap => 0 },
+				{ snp_name => 'rs142621348', ref_allele => 'T', alt_allele => 'C', chr => 'chr15', pos => '43366557', allele_swap => 0 },
+				{ snp_name => 'rs144579755', ref_allele => 'G', alt_allele => 'T', chr => 'chr6', pos => '132589568', allele_swap => 0 },
+				{ snp_name => 'rs1490413', ref_allele => 'G', alt_allele => 'A', chr => 'chr1', pos => '4307263', allele_swap => 0 },
+				{ snp_name => 'rs1523537', ref_allele => 'T', alt_allele => 'C', chr => 'chr20', pos => '52679623', allele_swap => 1 },
+				{ snp_name => 'rs17620', ref_allele => 'T', alt_allele => 'C', chr => 'chr8', pos => '23202743', allele_swap => 1 },
+				{ snp_name => 'rs17843021', ref_allele => 'G', alt_allele => 'A', chr => 'chr17', pos => '40960476', allele_swap => 0 },
+				{ snp_name => 'rs1800299', ref_allele => 'G', alt_allele => 'A', chr => 'chr17', pos => '80104857', allele_swap => 0 },
+				{ snp_name => 'rs1805034', ref_allele => 'C', alt_allele => 'T', chr => 'chr18', pos => '62360008', allele_swap => 0 },
+				{ snp_name => 'rs1805087', ref_allele => 'A', alt_allele => 'G', chr => 'chr1', pos => '236885200', allele_swap => 0 },
+				{ snp_name => 'rs181390', ref_allele => 'A', alt_allele => 'G', chr => 'chr22', pos => '17739497', allele_swap => 1 },
+				{ snp_name => 'rs1976518', ref_allele => 'C', alt_allele => 'T', chr => 'chr4', pos => '75884749', allele_swap => 1 },
+				{ snp_name => 'rs199794705', ref_allele => 'C', alt_allele => 'T', chr => 'chr22', pos => '37724757', allele_swap => 0 },
+				{ snp_name => 'rs2032624', ref_allele => 'C', alt_allele => 'A', chr => 'chrY', pos => '12914512', allele_swap => 1 },
+				{ snp_name => 'rs2111980', ref_allele => 'T', alt_allele => 'C', chr => 'chr12', pos => '105934476', allele_swap => 1 },
+				{ snp_name => 'rs2232001', ref_allele => 'C', alt_allele => 'T', chr => 'chr19', pos => '49118953', allele_swap => 0 },
+				{ snp_name => 'rs2241714', ref_allele => 'T', alt_allele => 'C', chr => 'chr19', pos => '41363487', allele_swap => 0 },
+				{ snp_name => 'rs2247870', ref_allele => 'G', alt_allele => 'A', chr => 'chr5', pos => '90855772', allele_swap => 1 },
+				{ snp_name => 'rs2275091', ref_allele => 'A', alt_allele => 'G', chr => 'chr10', pos => '97401208', allele_swap => 1 },
+				{ snp_name => 'rs2276749', ref_allele => 'T', alt_allele => 'C', chr => 'chr3', pos => '11601991', allele_swap => 1 },
+				{ snp_name => 'rs2286963', ref_allele => 'T', alt_allele => 'G', chr => 'chr2', pos => '210195326', allele_swap => 1 },
+				{ snp_name => 'rs2397060', ref_allele => 'T', alt_allele => 'C', chr => 'chr6', pos => '51746672', allele_swap => 0 },
+				{ snp_name => 'rs2830795', ref_allele => 'A', alt_allele => 'G', chr => 'chr21', pos => '27235844', allele_swap => 1 },
+				{ snp_name => 'rs34151633', ref_allele => 'T', alt_allele => 'C', chr => 'chr21', pos => '46416489', allele_swap => 0 },
+				{ snp_name => 'rs3734312', ref_allele => 'T', alt_allele => 'C', chr => 'chr6', pos => '75950680', allele_swap => 0 },
+				{ snp_name => 'rs3736824', ref_allele => 'A', alt_allele => 'C', chr => 'chr14', pos => '21353662', allele_swap => 1 },
+				{ snp_name => 'rs3737576', ref_allele => 'T', alt_allele => 'C', chr => 'chr1', pos => '101244007', allele_swap => 0 },
+				{ snp_name => 'rs3742207', ref_allele => 'T', alt_allele => 'G', chr => 'chr13', pos => '110166251', allele_swap => 0 },
+				{ snp_name => 'rs3795677', ref_allele => 'G', alt_allele => 'A', chr => 'chr1', pos => '240329434', allele_swap => 1 },
+				{ snp_name => 'rs3907047', ref_allele => 'T', alt_allele => 'C', chr => 'chr20', pos => '55384376', allele_swap => 0 },
+				{ snp_name => 'rs41298135', ref_allele => 'G', alt_allele => 'A', chr => 'chr11', pos => '77158332', allele_swap => 0 },
+				{ snp_name => 'rs45461899', ref_allele => 'C', alt_allele => 'A', chr => 'chr9', pos => '92068074', allele_swap => 0 },
+				{ snp_name => 'rs4619', ref_allele => 'A', alt_allele => 'G', chr => 'chr7', pos => '45893070', allele_swap => 0 },
+				{ snp_name => 'rs4717865', ref_allele => 'G', alt_allele => 'A', chr => 'chr7', pos => '74039869', allele_swap => 0 },
+				{ snp_name => 'rs4746136', ref_allele => 'G', alt_allele => 'A', chr => 'chr10', pos => '73541236', allele_swap => 1 },
+				{ snp_name => 'rs4817788', ref_allele => 'T', alt_allele => 'G', chr => 'chr21', pos => '36245332', allele_swap => 1 },
+				{ snp_name => 'rs4843075', ref_allele => 'G', alt_allele => 'A', chr => 'chr15', pos => '85581324', allele_swap => 1 },
+				{ snp_name => 'rs4925', ref_allele => 'C', alt_allele => 'A', chr => 'chr10', pos => '104263031', allele_swap => 0 },
+				{ snp_name => 'rs5215', ref_allele => 'C', alt_allele => 'T', chr => 'chr11', pos => '17387083', allele_swap => 1 },
+				{ snp_name => 'rs525869', ref_allele => 'T', alt_allele => 'C', chr => 'chrX', pos => '91341160', allele_swap => 0 },
+				{ snp_name => 'rs530501', ref_allele => 'C', alt_allele => 'T', chr => 'chrX', pos => '149485920', allele_swap => 0 },
+				{ snp_name => 'rs6166', ref_allele => 'C', alt_allele => 'T', chr => 'chr2', pos => '48962782', allele_swap => 0 },
+				{ snp_name => 'rs62489161', ref_allele => 'A', alt_allele => 'G', chr => 'chr8', pos => '13110540', allele_swap => 1 },
+				{ snp_name => 'rs649058', ref_allele => 'G', alt_allele => 'A', chr => 'chr1', pos => '74475609', allele_swap => 0 },
+				{ snp_name => 'rs6759892', ref_allele => 'T', alt_allele => 'G', chr => 'chr2', pos => '233693023', allele_swap => 0 },
+				{ snp_name => 'rs710079', ref_allele => 'C', alt_allele => 'T', chr => 'chr16', pos => '79224', allele_swap => 0 },
+				{ snp_name => 'rs717302', ref_allele => 'G', alt_allele => 'A', chr => 'chr5', pos => '2879281', allele_swap => 0 },
+				{ snp_name => 'rs7298565', ref_allele => 'G', alt_allele => 'A', chr => 'chr12', pos => '109499729', allele_swap => 0 },
+				{ snp_name => 'rs731257', ref_allele => 'G', alt_allele => 'A', chr => 'chr7', pos => '12629626', allele_swap => 0 },
+				{ snp_name => 'rs749670', ref_allele => 'A', alt_allele => 'G', chr => 'chr16', pos => '31077304', allele_swap => 1 },
+				{ snp_name => 'rs753381', ref_allele => 'T', alt_allele => 'C', chr => 'chr20', pos => '41168825', allele_swap => 0 },
+				{ snp_name => 'rs7627615', ref_allele => 'G', alt_allele => 'A', chr => 'chr3', pos => '184100628', allele_swap => 0 },
+				{ snp_name => 'rs76661599', ref_allele => 'G', alt_allele => 'A', chr => 'chr16', pos => '88722136', allele_swap => 0 },
+				{ snp_name => 'rs79486052', ref_allele => 'C', alt_allele => 'T', chr => 'chr9', pos => '83244840', allele_swap => 0 },
+				{ snp_name => 'rs8065080', ref_allele => 'T', alt_allele => 'C', chr => 'chr17', pos => '3577153', allele_swap => 1 },
+				{ snp_name => 'rs861539', ref_allele => 'G', alt_allele => 'A', chr => 'chr14', pos => '103699416', allele_swap => 0 },
+				{ snp_name => 'rs876724', ref_allele => 'C', alt_allele => 'T', chr => 'chr2', pos => '114974', allele_swap => 0 },
+				{ snp_name => 'rs891700', ref_allele => 'A', alt_allele => 'G', chr => 'chr1', pos => '239718626', allele_swap => 0 },
+				{ snp_name => 'rs917118', ref_allele => 'C', alt_allele => 'T', chr => 'chr7', pos => '4417372', allele_swap => 1 },
+				{ snp_name => 'rs9522149', ref_allele => 'T', alt_allele => 'C', chr => 'chr13', pos => '111174820', allele_swap => 0 },
+				{ snp_name => 'rs985492', ref_allele => 'G', alt_allele => 'A', chr => 'chr18', pos => '31731071', allele_swap => 0 },
+			]
+	},
 }
 %]
 
